--- a/backEnd/Back/tsconfig.json
+++ b/backEnd/Back/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "module": "ESNext",
-    "target": "ES6",
+    "module": "ES2022",
+    "target": "ES2017",
     "moduleResolution": "node",     
     "esModuleInterop": true,
     "skipLibCheck": true,
