--- a/Front/package.json
+++ b/Front/package.json
@@ -8,6 +8,7 @@
   "proxy": "http://localhost:3000/",
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
+    "axios": "^1.7.7",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
