--- a/Back/package.json
+++ b/Back/package.json
@@ -18,7 +18,10 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-typescript": "^7.24.7",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "20.12.11",
     "babel-loader": "^9.1.3",
     "file-loader": "^6.2.0",
@@ -31,9 +34,12 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.1",
     "http-proxy-middleware": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.2",
     "sequelize": "^6.37.3",
     "tpdesarrollo": "file:"
