--- a/Front/package.json
+++ b/Front/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
     "@popperjs/core": "^2.11.8",
+    "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
