cambio en el Back de mysql a mikroORM, falta adaptar el front

--- a/Back/tsconfig.json
+++ b/Back/tsconfig.json
@@ -9,8 +9,10 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": true
-    
+    "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "useDefineForClassFields": false,
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
