--- a/Back/package.json
+++ b/Back/package.json
@@ -33,14 +33,17 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "@mikro-orm/core": "6.4.1",
+    "@mikro-orm/mysql": "6.4.1",
+    "@mikro-orm/sql-highlighter": "1.0.1",
     "@types/cors": "^2.8.17",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.1",
-    "http-proxy-middleware": "^3.0.2",
+    "http-proxy-middleware": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.2",
+    "reflect-metadata": "0.2.2",
     "sequelize": "^6.37.3",
     "tpdesarrollo": "file:"
   }
