--- a/Front/package.json
+++ b/Front/package.json
@@ -7,6 +7,9 @@
   },
   "proxy": "http://localhost:3000/",
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@nextui-org/react": "^2.4.6",
     "@popperjs/core": "^2.11.8",
     "@react-google-maps/api": "^2.20.3",
