--- a/Back/package.json
+++ b/Back/package.json
@@ -23,6 +23,8 @@
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "20.12.11",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "babel-loader": "^9.1.3",
     "file-loader": "^6.2.0",
     "tsc-watch": "^6.0.4",
@@ -41,8 +43,11 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.1",
+    "google-auth-library": "^9.15.1",
     "http-proxy-middleware": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "0.2.2",
     "sequelize": "^6.37.3",
     "tpdesarrollo": "file:"
