--- a/Front/package.json
+++ b/Front/package.json
@@ -15,7 +15,9 @@
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
     "leaflet": "^1.9.4",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
