--- a/Front/package.json
+++ b/Front/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "sweetalert2": "^11.17.2",
     "tpdesarrollo": "file:"
   },
   "devDependencies": {
