--- a/Front/package.json
+++ b/Front/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "sweetalert2": "^11.17.2",
+    "sweetalert2-react-content": "^5.1.0",
     "tpdesarrollo": "file:"
   },
   "devDependencies": {
