--- a/Back/package.json
+++ b/Back/package.json
@@ -23,6 +23,7 @@
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "20.12.11",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "babel-loader": "^9.1.3",
@@ -41,11 +42,13 @@
     "@types/cors": "^2.8.17",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^4.19.2",
     "express-session": "^1.18.1",
     "google-auth-library": "^9.15.1",
     "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "0.2.2",
