--- a/Back/package.json
+++ b/Back/package.json
@@ -2,11 +2,10 @@
   "name": "tpdesarrollo",
   "version": "1.0.0",
   "type": "module",
-  "main": "CRUD1-Cliente.js",
+  "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:backend": "tsc",
-    "build": "npm run build:backend",
+    "build": "tsc",
     "start": "node dist/server.js",
     "startBack": "tsc-watch --onSuccess \"node dist/server.js\""
   },
