--- a/Back/package.json
+++ b/Back/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run",
     "build": "tsc",
     "start": "node dist/server.js",
     "startBack": "tsc-watch --onSuccess \"node dist/server.js\""
@@ -29,6 +29,9 @@
     "file-loader": "^6.2.0",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.1.3",
+    "vitest": "^1.6.0",
+    "supertest": "^6.3.4",
+    "@types/supertest": "^2.0.16",
     "url-loader": "^4.1.1",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
