--- a/Front/package.json
+++ b/Front/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "startFront": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "vitest run",
+    "test:e2e": "playwright test"
   },
   "proxy": "http://localhost:3000/",
   "dependencies": {
@@ -47,6 +49,11 @@
     "typescript": "^5.6.2",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.0.4",
+    "vitest": "^1.6.0",
+    "jsdom": "^24.1.0",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@playwright/test": "^1.49.1"
   }
 }
