Configurar para producción en Render

--- a/Back/package.json
+++ b/Back/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "main": "dist/server.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "test": "vitest run",
     "build": "tsc",
