--- a/Front/package.json
+++ b/Front/package.json
@@ -37,23 +37,24 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@playwright/test": "^1.49.1",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^14.3.1",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "jsdom": "^24.1.0",
     "style-loader": "^4.0.0",
     "typescript": "^5.6.2",
+    "vitest": "^1.6.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "vitest": "^1.6.0",
-    "jsdom": "^24.1.0",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@playwright/test": "^1.49.1"
+    "webpack-dev-server": "^5.0.4"
   }
 }
