--- a/Back/package.json
+++ b/Back/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "dist/server.js",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0 <25.0.0"
   },
   "scripts": {
     "test": "vitest run",
@@ -20,18 +20,9 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-typescript": "^7.24.7",
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.18.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "20.12.11",
-    "@types/nodemailer": "^6.4.17",
-    "@types/passport": "^1.0.17",
-    "@types/passport-google-oauth20": "^2.0.16",
     "babel-loader": "^9.1.3",
     "file-loader": "^6.2.0",
     "tsc-watch": "^6.0.4",
-    "typescript": "^5.1.3",
     "vitest": "^1.6.0",
     "supertest": "^6.3.4",
     "@types/supertest": "^2.0.16",
@@ -44,7 +35,15 @@
     "@mikro-orm/core": "6.4.1",
     "@mikro-orm/mysql": "6.4.1",
     "@mikro-orm/sql-highlighter": "1.0.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "20.12.11",
+    "@types/nodemailer": "^6.4.17",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
@@ -58,6 +57,6 @@
     "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "0.2.2",
     "sequelize": "^6.37.3",
-    "tpdesarrollo": "file:"
+    "typescript": "^5.1.3"
   }
 }
