--- a/render.yaml
+++ b/render.yaml
@@ -12,5 +12,5 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
-      - key: PORT
-        value: 10000
+      - key: CORS_ORIGINS
+        value: https://odysseytravels.infinityfreeapp.com,http://localhost:8080
