--- a/Front/package.json
+++ b/Front/package.json
@@ -6,7 +6,7 @@
     "start": "webpack serve --mode development",
     "startFront": "webpack serve --mode development",
     "build": "webpack --mode production",
-    "test": "vitest run",
+    "test": "vitest run --config vitest.config.ts",
     "test:e2e": "playwright test"
   },
   "proxy": "http://localhost:3000/",
